@@ -13,6 +13,8 @@
 	  support/regression/tests/gcc-torture-execute-20030714-1.c,
 	  support/regression/tests/gcc-torture-execute-980707-1.c:
 	  Document why some regression tests are disabled for pdk.
+	* device/include/mcs51/stc89.h:
+	  Fix typos.
 
 2023-02-28 Maarten Brock <sourceforge.brock AT dse.nl>
 
